用户中心完善部分小界面

--- a/public/user_center.html
+++ b/public/user_center.html
@@ -185,7 +185,31 @@
 						</div>
 					</div>
 					<div class="row" style="padding: 16px 20px;">
-						<div class="col-xs-12 col-sm-6">
+						<div class="col-xs-12 slim-padding">
+							<div class="padding-outer">
+								<div class="panel-box">
+									<div class="panel-header border-bg border-bg2">
+										<div class="panel-txt">
+											<div class="panel-title md-text-setting" style="font-size: 1.375rem;">物流动态</div>
+											<div class="panel-sub md-text-setting">最新的商品交易状态</div>
+										</div>
+									</div>
+									<div class="panel-body">
+										<div class="panel-cell-key">
+											<div class="md-text-seting">
+												<h3>学校</h3>
+											</div>
+										</div>
+										<div class="panel-cell-value">
+											<div class="md-text-seting">
+												<p>商品名称。。。</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-6 slim-padding">
 							<div class="padding-outer">
 								<div class="panel-box">
 									<div class="panel-header">
@@ -195,14 +219,13 @@
 										</div>
 										<div class="panel-img"><img src="./_test/rs-1.png" alt=""></div>
 									</div>
-									<div class="panel-body"></div>
 									<div class="panel-footer">
 										<a class="md-text-setting" href="javascript: void window.open();">查看</a>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-xs-12 col-sm-6">
+						<div class="col-xs-12 col-sm-6 slim-padding">
 							<div class="padding-outer">
 								<div class="panel-box">
 									<div class="panel-header">
@@ -212,14 +235,13 @@
 										</div>
 										<div class="panel-img"><img src="./_test/rs-1.png" alt=""></div>
 									</div>
-									<div class="panel-body"></div>
 									<div class="panel-footer">
 										<a class="md-text-setting" href="javascript: void window.open();">管理</a>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-xs-12 col-sm-6">
+						<div class="col-xs-12 col-sm-6 slim-padding">
 							<div class="padding-outer">
 								<div class="panel-box">
 									<div class="panel-header">
@@ -229,14 +251,13 @@
 										</div>
 										<div class="panel-img"><img src="./_test/rs-1.png" alt=""></div>
 									</div>
-									<div class="panel-body"></div>
 									<div class="panel-footer">
 										<a class="md-text-setting" href="javascript: void window.open();">修改</a>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-xs-12 col-sm-6">
+						<div class="col-xs-12 col-sm-6 slim-padding">
 							<div class="padding-outer">
 								<div class="panel-box">
 									<div class="panel-header">
@@ -246,7 +267,6 @@
 										</div>
 										<div class="panel-img"><img src="./_test/rs-1.png" alt=""></div>
 									</div>
-									<div class="panel-body"></div>
 									<div class="panel-footer">
 										<a class="md-text-setting" href="javascript: void window.open();">查看 & 管理</a>
 									</div>
@@ -312,6 +332,113 @@
 						<div class="sub-header">包括您的头像、注册时所用邮件及其他信息查看，或编辑相关信息</div>
 						<div class="bg flex-center"><i class="md-ico">&#xe8a6;</i></div>
 					</div>
+					<div class="row">
+						<div class="col-xs-12">
+							<div class="padding-outer" style="margin: 0 8px">
+								<div class="panel-box">
+									<div class="panel-header">
+										<div class="panel-txt">
+											<div class="panel-title md-text-setting" style="font-size: 1.375rem;">基础信息</div>
+											<div class="panel-sub md-text-setting">其他用户可能会看到您的部分信息。</div>
+										</div>
+										<!-- <div class="panel-img"><img src="./_test/rs-1.png" alt=""></div> -->
+									</div>
+									<div class="panel-body">
+										<div class="panel-cell-key">
+											<h3 class="md-text-setting" style="align-self: center;">头像</h3>
+										</div>
+										<div class="panel-cell-value">
+											<div class="md-text-seting">头像仅支持自定义设置，暂时不支持上传图像</div>
+										</div>
+										<div class="panel-cell-symbol">
+											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50" height="50"><path d="M.5.5v4.002h4.002V.5zm5 0v4.002h4.003V.5zm5 0v4.002H14.5V.5zm5 0v4.002h4V.5zm5 0v4.002h4V.5zm5 0v4.002h4V.5zm5 0v4.002h4V.5zm5.001 0v4.002H39.5V.5zm5 0v4.002H44.5V.5zm5 0v4.002H49.5V.5zM.5 5.5v4.003h4.002V5.5zm5 0v4.003h4.003V5.5zm5 0v4.003H14.5V5.5zm5 0v4.003h4V5.5zm5 0v4.003h4V5.5zm5 0v4.003h4V5.5zm5 0v4.003h4V5.5zm5.001 0v4.003H39.5V5.5zm5 0v4.003H44.5V5.5zm5 0v4.003H49.5V5.5zM.5 10.5V14.5h4.002V10.5zm5 0V14.5h4.003V10.5zm5 0V14.5H14.5V10.5zm5 0V14.5h4V10.5zm5 0V14.5h4V10.5zm5 0V14.5h4V10.5zm5 0V14.5h4V10.5zm5.001 0V14.5H39.5V10.5zm5 0V14.5H44.5V10.5zm5 0V14.5H49.5V10.5zM.5 15.5v4h4.002v-4zm5 0v4h4.003v-4zm5 0v4H14.5v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5.001 0v4H39.5v-4zm5 0v4H44.5v-4zm5 0v4H49.5v-4zM.5 20.5v4h4.002v-4zm5 0v4h4.003v-4zm5 0v4H14.5v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5.001 0v4H39.5v-4zm5 0v4H44.5v-4zm5 0v4H49.5v-4zM.5 25.5v4h4.002v-4zm5 0v4h4.003v-4zm5 0v4H14.5v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5.001 0v4H39.5v-4zm5 0v4H44.5v-4zm5 0v4H49.5v-4zM.5 30.5v4h4.002v-4zm5 0v4h4.003v-4zm5 0v4H14.5v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5 0v4h4v-4zm5.001 0v4H39.5v-4zm5 0v4H44.5v-4zm5 0v4H49.5v-4zM.5 35.502V39.5h4.002V35.5zm5 0V39.5h4.003V35.5zm5 0V39.5H14.5V35.5zm5 0V39.5h4V35.5zm5 0V39.5h4V35.5zm5 0V39.5h4V35.5zm5 0V39.5h4V35.5zm5.001 0V39.5H39.5V35.5zm5 0V39.5H44.5V35.5zm5 0V39.5H49.5V35.5zm-45.001 5V44.5h4.002V40.5zm5 0V44.5h4.003V40.5zm5 0V44.5H14.5V40.5zm5 0V44.5h4V40.5zm5 0V44.5h4V40.5zm5 0V44.5h4V40.5zm5 0V44.5h4V40.5zm5.001 0V44.5H39.5V40.5zm5 0V44.5H44.5V40.5zm5 0V44.5H49.5V40.5zm-45.001 5V49.5h4.002v-3.999zm5 0V49.5h4.003v-3.999zm5 0V49.5H14.5v-3.999zm5 0V49.5h4v-3.999zm5 0V49.5h4v-3.999zm5 0V49.5h4v-3.999zm5 0V49.5h4v-3.999zm5.001 0V49.5H39.5v-3.999zm5 0V49.5H44.5v-3.999zm5 0V49.5H49.5v-3.999z" fill="#ffc8c2"></path><text x="50%" y="50%" dy="11" style="text-anchor:middle;font-size: 30px; font-family: Roboto, RobotoDraft, Microsoft YaHei, Helvetica, Arial, sans-serif; fill: #ff6789; font-weight: 400">文</text></svg>
+										</div>
+									</div>
+									<div class="panel-hr"></div>
+									<div class="panel-body">
+										<div class="panel-cell-key">
+											<h3 class="md-text-setting">昵称</h3>
+										</div>
+										<div class="panel-cell-value">
+											<div class="md-text-seting">nickname-value</div>
+										</div>
+										<div class="panel-cell-symbol chevron"></div>
+									</div>
+									<div class="panel-hr"></div>
+									<div class="panel-body">
+										<div class="panel-cell-key">
+											<h3 class="md-text-setting">生日</h3>
+										</div>
+										<div class="panel-cell-value">
+											<div class="md-text-seting">1999年8月</div>
+										</div>
+										<div class="panel-cell-symbol chevron"></div>
+									</div>
+									<div class="panel-hr"></div>
+									<div class="panel-body">
+										<div class="panel-cell-key">
+											<h3 class="md-text-setting">性别</h3>
+										</div>
+										<div class="panel-cell-value">
+											<div class="md-text-seting">-</div>
+										</div>
+										<div class="panel-cell-symbol chevron"></div>
+									</div>
+									<div class="panel-hr"></div>
+									<div class="panel-body pass">
+										<div class="panel-cell-key">
+											<h3 class="md-text-setting">密码</h3>
+										</div>
+										<div class="panel-cell-value">
+											<div class="md-text-seting">
+												<p class="md-text-setting" style="color: #5f6368;">上次更改时间：2018年1月1日</p>
+											</div>
+										</div>
+										<div class="panel-cell-symbol chevron"></div>
+									</div>
+									<!-- <div class="panel-footer">
+										<a class="md-text-setting" href="javascript: void window.open();">查看</a>
+									</div> -->
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12">
+							<div class="padding-outer" style="margin: 0 8px;">
+								<div class="panel-box">
+									<div class="panel-header">
+										<div class="panel-txt">
+											<div class="panel-title md-text-setting" style="font-size: 1.375rem;">联系信息</div>
+											<div class="panel-sub md-text-setting">其他用户可能会看到您的部分信息。</div>
+										</div>
+									</div>
+									<div class="panel-body">
+										<div class="panel-cell-key">
+											<h3 class="md-text-setting">电子邮件</h3>
+										</div>
+										<div class="panel-cell-value">
+											<div class="md-text-seting">
+												<p>jianzheng4321@163.com</p>
+											</div>
+										</div>
+										<div class="panel-cell-symbol chevron"></div>
+									</div>
+									<div class="panel-hr"></div>
+									<div class="panel-body">
+										<div class="panel-cell-key">
+											<h3 class="md-text-setting">电话</h3>
+										</div>
+										<div class="panel-cell-value">
+											<div class="md-text-seting">
+												<p>185 7890 1234</p>
+												<p>185 1234 1234</p>
+											</div>
+										</div>
+										<div class="panel-cell-symbol chevron"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="content-container trans-all-200" style="background-color: #fff" id="_safety">
 					<div class="header md-text-setting xs-d-none md-d-block" style="background-color: #febe39">
@@ -326,19 +453,145 @@
 						<div class="sub-header">查看订单或者售后的详细信息或者进行申请售后服务</div>
 						<div class="bg flex-center"><i class="md-ico">&#xe850;</i></div>
 					</div>
+					<section class="tab_case c_2a2a2a" id="tab_case_">
+						<ul>
+							<li index="0" class="active"><a>全部<span class="u_line" style="width: calc(100% + 200px); background-color: #2a2a2a;"><span class="u_before" style="transform: translateX(100px); transition-delay: 10ms;"></span><span class="u_after" style="transform: translateX(100%) translateX(-100px); transition-delay: 150ms;"></span></span></a></li>
+							<li index="1"><a>处理中</a></li>
+							<li index="2"><a>已处理</a></li>
+						</ul>
+					</section>
+					<div class="tabs_container c_2a2a2a">
+						<section class="tab_container enlarging" id="tab_container_">
+							<div class="tab_content" style="background: firebrick">some text 0</div>
+							<div class="tab_content" style="background: indigo">some text 1</div>
+							<div class="tab_content" style="background: cornflowerblue">some text 2</div>
+						</section>
+					</div>
 				</div>
-				<div class="content-container trans-all-200" style="background-color: #fff" id="address">
+				<div class="content-container trans-all-200" style="background-color: #fff" id="_address">
 					<div class="header md-text-setting xs-d-none md-d-block" style="background-color: #e51042">
 						<h1>收货地址</h1>
 						<div class="sub-header">查看收货地址列表，以及进行修改收货地址操作</div>
 						<div class="bg flex-center"><i class="md-ico">&#xe55f;</i></div>
 					</div>
+					<div class="col-xs-12">
+						<div class="padding-outer">
+							<div class="panel-box">
+								<div class="panel-header border-bg">
+									<div class="panel-txt">
+										<div class="panel-title md-text-setting" style="font-size: 1.375rem;">默认收货地址</div>
+										<div class="panel-sub md-text-setting">以下地址将会作为购买商品时的送货目标地址。</div>
+									</div>
+								</div>
+								<div class="panel-body">
+									<div class="panel-cell-key">
+										<div class="md-text-seting">
+											<h3>学校</h3>
+										</div>
+									</div>
+									<div class="panel-cell-value">
+										<div class="md-text-seting">
+											<p>湖南省长沙市芙蓉区东湖街道农大路1号 湖南农业大学</p>
+										</div>
+									</div>
+									<div class="panel-cell-symbol chevron"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12">
+						<div class="padding-outer" style="margin-top: 20px;">
+							<div class="panel-box">
+								<div class="panel-header">
+									<div class="panel-txt">
+										<div class="panel-title md-text-setting" style="font-size: 1.375rem;">其他收货地址</div>
+										<div class="panel-sub md-text-setting">备用的收货地址，可以进行添加和删除等管理操作。</div>
+									</div>
+								</div>
+								<div class="panel-body">
+									<div class="panel-cell-key">
+										<div class="md-text-seting">
+											<h3>家</h3>
+										</div>
+									</div>
+									<div class="panel-cell-value">
+										<div class="md-text-seting">
+											<p>湖南省长沙市芙蓉区东湖街道农大路1号 科教新村</p>
+										</div>
+									</div>
+									<div class="panel-cell-symbol chevron"></div>
+								</div>
+								<div class="panel-hr"></div>
+								<div class="panel-body">
+									<div class="panel-cell-key">
+										<div class="md-text-seting">
+											<h3>地址2</h3>
+										</div>
+									</div>
+									<div class="panel-cell-value">
+										<div class="md-text-seting">
+											<p>湖南省长沙市芙蓉区东湖街道农大路1号 科教新村</p>
+										</div>
+									</div>
+									<div class="panel-cell-symbol chevron"></div>
+								</div>
+								<div class="panel-footer">
+									<a class="md-text-setting" href="javascript: void window.open();">添加一个新的收货地址</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="content-container trans-all-200" style="background-color: #fff" id="feedback">
+				<div class="content-container trans-all-200" style="background-color: #fff" id="_feedback">
 					<div class="header md-text-setting xs-d-none md-d-block" style="background-color: #1a73e8">
 						<h1>反馈和建议</h1>
 						<div class="sub-header">欢迎您向我们提供宝贵的建议</div>
 						<div class="bg flex-center"><i class="md-ico">&#xe87f;</i></div>
+					</div>
+					<div class="col-xs-12">
+						<div class="padding-outer" style="padding-top: 25px;">
+							<div class="md-for-input focused">
+								<label for="multi-line" class="md-text-setting">输入问题描述，以及反馈</label>
+								<div class="multi-out md-text-setting">
+									<textarea class="md-textarea md-text-setting" id="multi-line" tabindex="0" rows="4" maxlength="256"></textarea>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12">
+						<div class="padding-outer" style="margin: 16px 0;">
+							<div class="panel-box">
+								<div class="panel-header">
+									<div class="panel-txt">
+										<div class="panel-title md-text-setting" style="font-size: 1.375rem;">常见问题</div>
+										<div class="panel-sub md-text-setting">以下为一些可能遇到的问题以及解决办法</div>
+									</div>
+								</div>
+								<div class="panel-body">
+									<div class="panel-cell-key">
+										<h3 class="md-text-setting">怎么对商品进行收藏</h3>
+									</div>
+									<div class="panel-cell-value">
+										<div class="md-text-seting">
+											<p>。。。。。。。。。。。。</p>
+										</div>
+									</div>
+									<div class="panel-cell-symbol chevron"></div>
+								</div>
+								<div class="panel-hr"></div>
+								<div class="panel-body">
+									<div class="panel-cell-key">
+										<h3 class="md-text-setting">关于付款问题</h3>
+									</div>
+									<div class="panel-cell-value">
+										<div class="md-text-seting">
+											<p>。。。。。。。。。。。</p>
+										</div>
+									</div>
+									<div class="panel-cell-symbol chevron"></div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
