详情页 添加 评论部分、我的消息页面添加
SVG 添加列表
- b 1~9 more => 新信息条数标识
- star 00 ~ 100 => 商品评价星级

--- a/public/user_center.html
+++ b/public/user_center.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="container-fluid header">
-		<div class="banner-container flex-center" id="header-banner"> <!-- z-index 1 -->
+		<div class="banner-container flex-center topped trans-all-200" id="header-banner"> <!-- z-index 1 -->
 			<div class="banner-limit">
 				<!-- menu -->
 				<div class="mains">
@@ -226,17 +226,18 @@
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-6 slim-padding">
+							<!-- 我的消息 -->
 							<div class="padding-outer">
 								<div class="panel-box">
 									<div class="panel-header">
 										<div class="panel-txt">
-											<div class="panel-title md-text-setting">浏览足迹</div>
-											<div class="panel-sub md-text-setting">查看浏览历史的商品的列表，以及其他信息。</div>
+											<div class="panel-title md-text-setting">我的消息</div>
+											<div class="panel-sub md-text-setting">接受到的系统通知以及其他消息通知。</div>
 										</div>
 										<div class="panel-img"><img src="./_test/rs-1.png" alt=""></div>
 									</div>
 									<div class="panel-footer">
-										<a class="md-text-setting" href="javascript: void window.open();">管理</a>
+										<a class="md-text-setting" href="javascript: void window.open();">查看 & 管理</a>
 									</div>
 								</div>
 							</div>
@@ -269,6 +270,23 @@
 									</div>
 									<div class="panel-footer">
 										<a class="md-text-setting" href="javascript: void window.open();">查看 & 管理</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-6 slim-padding">
+							<!-- 浏览足迹 -->
+							<div class="padding-outer">
+								<div class="panel-box">
+									<div class="panel-header">
+										<div class="panel-txt">
+											<div class="panel-title md-text-setting">浏览足迹</div>
+											<div class="panel-sub md-text-setting">查看浏览历史的商品的列表，以及其他信息。</div>
+										</div>
+										<div class="panel-img"><img src="./_test/rs-1.png" alt=""></div>
+									</div>
+									<div class="panel-footer">
+										<a class="md-text-setting" href="javascript: void window.open();">管理</a>
 									</div>
 								</div>
 							</div>
