--- a/public/details.html
+++ b/public/details.html
@@ -209,7 +209,7 @@
                 </section>
             </div>
             <div class="product-tags col-xs-12 col-md-6" style="height: 100%; width: 95%">
-                <div class="product-tags-inner">
+                <div class="product-tags-inner trans-all-200">
                     <div class="title-tag">
                         <div class="product-logo xs-d-none md-d-block">
                             <div class="ico-cover flex-center trans-all-200">
@@ -232,7 +232,7 @@
                     </div>
                     <div class="vary-tag">
                         <div class="tag-th md-text-setting flex-center"><span>已选</span></div>
-                        <div class="tag-tb md-text-setting flex-center"><span>大包，300g，原味，恰恰香瓜子s</span></div>
+                        <div class="tag-tb md-text-setting flex-center"><span class="text-nowrap" style="width: calc(100% - 40px)">大包，300g，原味，恰恰香瓜子s</span></div>
                         <div class="tag-te md-text-setting flex-center">
                             <span class="product-pieces flex-center"><span>×1</span></span>
                             <i class="md-ico trans-bc-500">&#xe5cc;</i>
@@ -260,6 +260,110 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="product-info col-xs-12 col-md-6">
+                <h4 class="md-text-setting">食品信息</h4>
+                <div class="table">
+                    <div class="row table-header">
+                        <div class="col-xs-3">信息名称</div>
+                        <div class="col-xs-9">相关参数</div>
+                    </div>
+                    <div class="row table-body">
+                        <div class="col-xs-3">食品名称</div>
+                        <div class="col-xs-9">恰恰香瓜子</div>
+                    </div>
+                    <div class="row table-body">
+                        <div class="col-xs-3">原产地</div>
+                        <div class="col-xs-9">湖南省长沙市</div>
+                    </div>
+                    <div class="row table-body">
+                        <div class="col-xs-3">生产商</div>
+                        <div class="col-xs-9">湖南省长沙市XXX公司</div>
+                    </div>
+                    <div class="row table-body">
+                        <div class="col-xs-3">食品保质期</div>
+                        <div class="col-xs-9">12个月</div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-comments-part col-xs-12 col-md-6">
+                <h4 class="md-text-setting">相关服务</h4>
+                <div class="blade-display">
+                    <img src="./img/service/blade-jstk.svg" alt="急速退款">
+                    <img src="./img/service/blade-myf.svg" alt="免运费">
+                    <img src="./img/service/blade-psbt.svg" alt="破损包退">
+                    <img src="./img/service/blade-zpbz.svg" alt="正品保证">
+                </div>
+            </div>
+            <div class="product-info col-xs-12">
+                <h4 class="md-text-setting">部分评价</h4>
+            </div>
+            <div class="product-info" style="background-color: #fff; margin: 0; padding: 0;">
+                <div class="row" style="padding: 0; margin: 0;">
+                    <div class="col-xs-12 col-md-6 comment-box">
+                        <div class="comment-part">
+                            <div class="comment-avatars">
+                                <img src="./img/avatar_example.svg" alt="user1">
+                            </div>
+                            <div class="comment-said">
+                                <div class="margin-box">
+                                    <div class="user-name md-text-setting"><span>泣血的蔷薇</span></div>
+                                    <div class="comment-date md-text-setting"><span>2019年5月16日</span></div>
+                                </div>
+                                <div class="said-what md-text-setting">
+                                    <p>第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段</p>
+                                </div>
+                            </div>
+                            <div class="stars">
+                                <img src="./img/stars/star-80.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 comment-box">
+                        <div class="comment-part">
+                            <div class="comment-avatars">
+                                <img src="./img/avatar_example.svg" alt="user1">
+                            </div>
+                            <div class="comment-said">
+                                <div class="margin-box">
+                                    <div class="user-name md-text-setting"><span>泣血的蔷薇</span></div>
+                                    <div class="comment-date md-text-setting"><span>2019年5月16日</span></div>
+                                </div>
+                                <div class="said-what md-text-setting">
+                                    <p>第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段</p>
+                                </div>
+                            </div>
+                            <div class="stars">
+                                <img src="./img/stars/star-60.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 comment-box">
+                        <div class="comment-part">
+                            <div class="comment-avatars">
+                                <img src="./img/avatar_example.svg" alt="user1">
+                            </div>
+                            <div class="comment-said">
+                                <div class="margin-box">
+                                    <div class="user-name md-text-setting"><span>泣血的蔷薇</span></div>
+                                    <div class="comment-date md-text-setting"><span>2019年5月16日</span></div>
+                                </div>
+                                <div class="said-what md-text-setting">
+                                    <p>第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段第一段</p>
+                                </div>
+                            </div>
+                            <div class="stars">
+                                <img src="./img/stars/star-50.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-info col-xs-12">
+                <h4 class="md-text-setting">详情</h4>
+            </div>
+            <div class="product-info col-xs-12">
+                <h4 class="md-text-setting">全部评论</h4>
             </div>
         </div>
     </div>
