我的消息界面组件功能完善、验证邮箱HTML模板使用表格布局重写（\shop\public\templates\NEW_template_EleMall_check_email.html）
解决了在部分邮箱客户端邮箱模板会显示模糊的问题，使用了表格布局

--- a/public/_myMessages.html
+++ b/public/_myMessages.html
@@ -47,70 +47,72 @@
                     </div>
                 </div>
                 <div class="message-display-container">
-                    <div class="message-part">
-                        <div class="message-date-time md-text-setting"><span>5月17日</span></div>
-                        <div class="message-content-words">
-                            <div class="message-content-words-outer md-text-setting">
-                                <span class="time-stamp">19:37</span>
-                                <p>01321313213013213132130132131321301321313213013213132130132131321301321313213013213132130132131321301321313213</p>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
+                    <div class="part-container">
+                        <div class="message-part">
+                            <div class="message-date-time md-text-setting"><span>5月17日</span></div>
+                            <div class="message-content-words">
+                                <div class="message-content-words-outer md-text-setting">
+                                    <span class="time-stamp">19:37</span>
+                                    <p>01321313213013213132130132131321301321313213013213132130132131321301321313213013213132130132131321301321313213</p>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="message-part">
-                        <div class="message-date-time md-text-setting"><span></span></div>
-                        <div class="message-content-words">
-                            <div class="message-content-words-outer md-text-setting">
-                                <span class="time-stamp">19:37</span>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
+                        <div class="message-part">
+                            <div class="message-date-time md-text-setting"><span></span></div>
+                            <div class="message-content-words">
+                                <div class="message-content-words-outer md-text-setting">
+                                    <span class="time-stamp">19:37</span>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="message-part">
-                        <div class="message-date-time md-text-setting"><span></span></div>
-                        <div class="message-content-words">
-                            <div class="message-content-words-outer md-text-setting">
-                                <span class="time-stamp">19:37</span>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
+                        <div class="message-part">
+                            <div class="message-date-time md-text-setting"><span></span></div>
+                            <div class="message-content-words">
+                                <div class="message-content-words-outer md-text-setting">
+                                    <span class="time-stamp">19:37</span>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="message-part">
-                        <div class="message-date-time md-text-setting"><span>5月15日</span></div>
-                        <div class="message-content-words">
-                            <div class="message-content-words-outer md-text-setting">
-                                <span class="time-stamp">19:37</span>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
+                        <div class="message-part">
+                            <div class="message-date-time md-text-setting"><span>5月15日</span></div>
+                            <div class="message-content-words">
+                                <div class="message-content-words-outer md-text-setting">
+                                    <span class="time-stamp">19:37</span>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="under-is-prev md-text-setting flex-center"><span>4</span></div>
-                    <div class="message-part">
-                        <div class="message-date-time md-text-setting"><span>5月14日</span></div>
-                        <div class="message-content-words">
-                            <div class="message-content-words-outer md-text-setting">
-                                <span class="time-stamp">19:37</span>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
+                        <div class="under-is-prev md-text-setting flex-center"><span>4</span></div>
+                        <div class="message-part">
+                            <div class="message-date-time md-text-setting"><span>5月14日</span></div>
+                            <div class="message-content-words">
+                                <div class="message-content-words-outer md-text-setting">
+                                    <span class="time-stamp">19:37</span>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="message-part">
-                        <div class="message-date-time md-text-setting"><span>5月12日</span></div>
-                        <div class="message-content-words">
-                            <div class="message-content-words-outer md-text-setting">
-                                <span class="time-stamp">19:37</span>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
+                        <div class="message-part">
+                            <div class="message-date-time md-text-setting"><span>5月12日</span></div>
+                            <div class="message-content-words">
+                                <div class="message-content-words-outer md-text-setting">
+                                    <span class="time-stamp">19:37</span>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -130,25 +132,27 @@
                     </div>
                 </div>
                 <div class="message-display-container">
-                    <div class="message-part">
-                        <div class="message-date-time md-text-setting"><span>5月17日</span></div>
-                        <div class="message-content-words">
-                            <div class="message-content-words-outer md-text-setting">
-                                <span class="time-stamp">19:37</span>
-                                <p>01321313213013213132130132131321301321313213013213132130132131321301321313213013213132130132131321301321313213</p>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
+                    <div class="part-container">
+                        <div class="message-part">
+                            <div class="message-date-time md-text-setting"><span>5月17日</span></div>
+                            <div class="message-content-words">
+                                <div class="message-content-words-outer md-text-setting">
+                                    <span class="time-stamp">19:37</span>
+                                    <p>01321313213013213132130132131321301321313213013213132130132131321301321313213013213132130132131321301321313213</p>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="message-part">
-                        <div class="message-date-time md-text-setting"><span>5月17日</span></div>
-                        <div class="message-content-words">
-                            <div class="message-content-words-outer md-text-setting">
-                                <span class="time-stamp">19:37</span>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
-                                <p>01321313213</p>
+                        <div class="message-part">
+                            <div class="message-date-time md-text-setting"><span>5月17日</span></div>
+                            <div class="message-content-words">
+                                <div class="message-content-words-outer md-text-setting">
+                                    <span class="time-stamp">19:37</span>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                    <p>01321313213</p>
+                                </div>
                             </div>
                         </div>
                     </div>
