见【/server.js】主要更新了几个页面需要的JSON数据格式的说明注释
收货信息数据的格式 ①
用户头像（avatars）外观数据的格式 ②
历史记录页面所接受的数据的格式 ③
商品评论页全部评论 ④

--- a/public/mkOrder.html
+++ b/public/mkOrder.html
@@ -219,7 +219,7 @@
             <div class="lv2-container-inner bt-bar">
                 <div class="bar-outer">
                     <div class="bar-left-cost">
-                        <span class="cost-prc md-text-seting">1224</span>
+                        <span class="cost-prc md-text-setting">1224</span>
                     </div>
                     <div class="bar-right-btn flex-center post-order">
                         <span class="text-nowrap md-text-setting">提交订单</span>
