“分类”页面结构大致完善->_classify.html，“订单详情”页面完善->orderDetail.html

--- a/public/_orderDetail.html
+++ b/public/_orderDetail.html
@@ -43,10 +43,48 @@
                         <div class="end-title md-text-setting text-nowrap user_name">用户名</div>
                         <div class="end-sub md-text-setting text-nowrap">收货地址：收货地址收货地址收货地址收货地址收货地址收货地址收货地址收货地址收货地址收货地址收货地址收货地址收货地址收货地址收货地址收货地址</div>
                         <div class="end-sub md-text-setting text-nowrap tel">联系方式：185 4566 5855</div>
-                        <div class="chevron-right"></div>
                     </div>
                 </div>
                 <div class="banner-split"></div>
+                <div class="order-part">
+                    <div class="part-front" style="background-color: green;">
+                    </div>
+                    <div class="part-body">
+                        <div class="end-title md-text-setting text-nowrap order-name">名称名称名称名称名称名称名称名称名称名称名称</div>
+                        <div class="end-sub md-text-setting text-nowrap order-subname">名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称</div>
+                        <div class="end-sub md-text-setting text-nowrap order-subname">名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称名称</div>
+                    </div>
+                    <div class="part-end">
+                        <div class="end-price md-text-setting">￥18.80</div>
+                        <div class="end-count md-text-setting">×2</div>
+                    </div>
+                </div>
+                <div class="detail-part md-text-setting">
+                    <div class="part-front">
+                        <div class="table-row-key text-nowrap">订单编号</div>
+                        <div class="table-row-key text-nowrap">联系卖家</div>
+                        <div class="table-row-key text-nowrap">创建时间</div>
+                        <div class="table-row-key text-nowrap">成交时间</div>
+                    </div>
+                    <div class="part-body md-text-setting">
+                        <div class="table-row-val text-nowrap" id="order-number">01234567890</div>
+                        <div class="table-row-val text-nowrap"><a href="mailto:jiangzheng4321@163.com" id="saler">jiangzheng4321@163.com</a></div>
+                        <div class="table-row-val text-nowrap">2019-7-2</div>
+                        <div class="table-row-val text-nowrap">2019-7-2</div>
+                    </div>
+                    <div class="part-end md-text-setting">
+                        <div class="table-row-val text-nowrap act-link"><a class="copy-btn" data-copy-tar="order-number">复制</a></div>
+                        <div class="table-row-val text-nowrap act-link"><a class="copy-btn" data-copy-tar="saler">复制</a></div>
+                    </div>
+                </div>
+                <div class="banner-split"></div>
+                <div class="total-part">
+                    <div class="md-text-setting total-count">共2件</div>
+                    <div class="md-text-setting total-price">小计：18.80元</div>
+                </div>
+            </div>
+            <div class="button-opt flex-center">
+                <div class="outline-btn deleteBtn flex-center"><span>删除此订单</span></div>
             </div>
         </div>
         <div class="selection_bg"></div>
